# SPIRE

./: .gitattributes  .gitignore  Cargo.toml  InfiniteCanvas.svelte  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: pages.yml  release.yml  test.yml
apps/spire-cli/: Cargo.toml
apps/spire-cli/src/: main.rs
apps/spire-desktop/: package.json  playwright.config.ts  stats.html  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/spire-desktop/e2e/fixtures/: widgetLabels.ts
apps/spire-desktop/e2e/page-objects/: pdg-workflow.page.ts  workbench.page.ts
apps/spire-desktop/e2e/specs/: canvas_interaction_engine.spec.ts  canvas_interactions.spec.ts  critical_workflow.spec.ts  diagram_graph3_regression.spec.ts  pdg.spec.ts  widget_context_and_sync.spec.ts  widget_internet_and_interop.spec.ts  widget_matrix.spec.ts
apps/spire-desktop/playwright-report/: index.html
apps/spire-desktop/src/: app.html  app.pcss
apps/spire-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/spire-desktop/src-tauri/icons/: icon.icns
apps/spire-desktop/src-tauri/src/: main.rs
apps/spire-desktop/src/lib/: api.ts
apps/spire-desktop/src/lib/actions/: draggable.ts  interactable.ts  longpress.ts  rafThrottle.ts  resizable.ts  tooltip.ts  widgetEvents.ts
apps/spire-desktop/src/lib/actions/__tests__/: interactable.test.ts  widgetEvents.test.ts
apps/spire-desktop/src/lib/components/: AmplitudePanel.svelte  AnalysisWidget.svelte  ComputeGridWidget.svelte  CosmologyPanel.svelte  DalitzPlotter.svelte  DecayCalculator.svelte  DiagramEditor.svelte  DiagramVisualizer.svelte  EventDisplay.svelte  ExternalModels.svelte  FlavorWorkbench.svelte  GlobalFitDashboard.svelte  KinematicsView.svelte  LagrangianWorkbench.svelte  LogConsole.svelte  ModelLoader.svelte  ParameterScanner.svelte  ParticleAtlas.svelte  PluginManager.svelte  ReactionWorkspace.svelte  ReferencesPanel.svelte  TelemetryPanel.svelte  WebglHeatmap.svelte
apps/spire-desktop/src/lib/components/atlas/: AtomicModel3D.svelte  (+16 more)
apps/spire-desktop/src/lib/data/: defaults.ts  elements.json  glossary.json  isotopes.json  periodic_table.json
apps/spire-desktop/src/lib/services/: ComputeGrid.ts  PresetService.ts  workspaceManager.ts
apps/spire-desktop/src/lib/stores/: atlasPeriodicStore.test.ts  atlasPeriodicStore.ts  atlasSelectionStore.ts  contextMenuStore.ts  layoutStore.ts  notebookDocumentStore.ts  notebookStore.ts  pdgIntegrationStore.ts  pdgStore.ts  physicsStore.ts  pipelineGraphStore.ts  popupStore.ts  selectionBus.ts  widgetInteropStore.ts  workspaceInputsStore.ts  workspaceStore.ts
apps/spire-desktop/src/lib/types/: compute.ts  menu.ts  spire.ts  workspace.ts
apps/spire-desktop/src/lib/utils/: chartLoader.ts  dnd.ts  export.ts  throttle.ts
apps/spire-desktop/src/lib/workers/: WorkerManager.ts  compute.worker.ts  dataProcessor.worker.ts  executeWorkerTask.ts  histogram.worker.ts  katexRender.worker.ts  lhe_formatter.worker.ts  textFormatter.worker.ts  wasm.worker.ts
apps/spire-desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/spire-desktop/src/routes/window/: +page.svelte
apps/spire-desktop/static/: site.webmanifest
apps/spire-desktop/test-results/: .last-run.json
crates/spire-bindings/: Cargo.toml
crates/spire-bindings/src/: lib.rs  python_api.rs  wasm_api.rs
crates/spire-kernel/: Cargo.toml
crates/spire-kernel/benches/: PROFILING.md  kinematics_bench.rs  pdg_lookup_bench.rs  throughput_bench.rs
crates/spire-kernel/proptest-regressions/math/: precision.txt
crates/spire-kernel/src/: algebra.rs  analysis.rs  data_loader.rs  decay.rs  graph.rs  groups.rs  integration.rs  interface.rs  kinematics.rs  lagrangian.rs  lib.rs  nwa.rs  ontology.rs  pdf.rs  plugins.rs  s_matrix.rs  scanner.rs  scripting.rs  session.rs  telemetry.rs
crates/spire-kernel/src/algebra/: mod.rs  wgsl_compiler.rs
crates/spire-kernel/src/analysis/: global_fit.rs  likelihood.rs  mod.rs
crates/spire-kernel/src/cosmology/: mod.rs  relic.rs
crates/spire-kernel/src/flavor/: eft.rs  lattice.rs  mod.rs
crates/spire-kernel/src/integration/: gpu.rs  mod.rs
crates/spire-kernel/src/io/: csv.rs  experimental.rs  latex.rs  lhe.rs  mod.rs  network.rs  provenance.rs
crates/spire-kernel/src/math/: mcmc.rs  mod.rs  ode.rs  precision.rs
crates/spire-kernel/src/nlo/: dipole.rs  mod.rs
crates/spire-kernel/src/pdf/: variance.rs
crates/spire-kernel/src/reco/: clustering.rs  detector.rs  mod.rs
crates/spire-kernel/src/shower/: bridge.rs  mod.rs
crates/spire-kernel/src/theory/: ast.rs  derivation.rs  mod.rs  renormalization.rs  rge.rs  slha.rs  ufo.rs  validation.rs
crates/spire-kernel/src/theory/pdg/: adapter.rs  arbiter.rs  cache.rs  contracts.rs  database.rs  decay_query.rs  extraction.rs  guards.rs  mod.rs  particle.rs  policy.rs  resolution.rs  rest.rs
crates/spire-kernel/tests/: fuzz_parsers.rs  pdg_adapter.rs  pdg_contracts.rs  pdg_decay.rs  pdg_integration.rs  proptest_algebra.proptest-regressions  proptest_algebra.rs  proptest_kinematics.proptest-regressions  proptest_kinematics.rs  sm_benchmarks.rs  strategies.rs
crates/spire-plugin-api/: Cargo.toml
crates/spire-plugin-api/src/: lib.rs
crates/spire-python/: Cargo.toml  pyproject.toml
crates/spire-python/spire/: __init__.py  __init__.pyi
crates/spire-python/src/: amplitude.rs  decay.rs  diagrams.rs  errors.rs  events.rs  kinematics_mod.rs  lib.rs  model.rs  particle.rs  reaction.rs  xsec.rs
data/: particles.toml  run_card.toml  sm_vertices.toml
docs/: mkdocs.yml
docs/architecture/: pdg_semantics.md
docs/decisions/: ADR-0001-stateless-ipc-boundary.md  ADR-0002-dynamic-widget-registry.md  ADR-0003-dual-layout-memory.md  ADR-0004-pipeline-dag-execution.md  ADR-0005-backend-transport-abstraction.md  README.md
docs/guide/: widget-development.md
docs/qa/: combinatorial_matrix.md
docs/source/: index.md
docs/source/api/: reference.md  rust-api.md
docs/source/decisions/: index.md
docs/source/guide/: interop.md  quickstart.md  scripting.md  widget-development.md
docs/source/theory/: formalism.md
(+97 files in other folders)
