[workspace]
resolver = "2"
members = [
    "crates/spire-kernel",
    "crates/spire-bindings",
    "apps/spire-desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SPIRE Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Wartets/SPIRE"
description = "Structured Particle Interaction & Reaction Engine"