[workspace]
resolver = "2"
members = [
    "crates/spire-kernel",
    "crates/spire-bindings",
    "crates/spire-python",
    "crates/spire-plugin-api",
    "apps/spire-desktop/src-tauri",
    "apps/spire-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SPIRE Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Wartets/SPIRE"
description = "Structured Particle Interaction & Reaction Engine"

# ── Workspace-wide lints ────────────────────────────────────────
[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
# Deny standard clippy lints so CI fails on regressions.
all = { level = "deny", priority = -1 }
# Selected pedantic lints that improve code quality without being
# overly noisy for a physics codebase with many numeric casts.
manual_strip = "deny"
redundant_field_names = "deny"
needless_range_loop = "deny"
redundant_closure = "deny"
no_effect_replace = "deny"
doc_lazy_continuation = "deny"
unnecessary_to_owned = "deny"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.release.package.spire-bindings]
opt-level = 3
codegen-units = 1
strip = "symbols"