[package]
name = "spire-bindings"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spire-kernel = { path = "../spire-kernel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[features]
python = ["pyo3"]