[package]
name = "spire-bindings"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spire-kernel = { path = "../spire-kernel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
pyo3 = { version = "0.20", optional = true }
numpy = { version = "0.20", optional = true }

[features]
python = ["pyo3", "numpy"]
extension-module = ["pyo3/extension-module"]
auto-initialize = ["pyo3/auto-initialize"]

[dev-dependencies]
pyo3 = { version = "0.20", features = ["auto-initialize"] }