[package]
name = "spire-kernel"
version.workspace = true
edition.workspace = true
description = "Core computational physics engine for SPIRE"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
petgraph = "0.6"
nalgebra = "0.32"
rand = "0.8"
rayon = "1.10"
rhai = { version = "1.17", features = ["sync"] }

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kinematics_bench"
harness = false