[package]
name = "spire-kernel"
version.workspace = true
edition.workspace = true
description = "Core computational physics engine for SPIRE"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
petgraph = "0.6"
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
rhai = { version = "1.17", features = ["sync"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kinematics_bench"
harness = false