[package]
name = "spire-kernel"
version.workspace = true
edition.workspace = true
description = "Core computational physics engine for SPIRE"

[lints]
workspace = true

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
plugins = ["dep:wasmtime", "dep:spire-plugin-api"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
petgraph = "0.6"
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
smallvec = "1.13"
rhai = { version = "1.17", features = ["sync"] }
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }

# GPU dependencies (behind the `gpu` feature flag)
wgpu = { version = "24.0", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.21", features = ["derive"], optional = true }

# Plugin dependencies (behind the `plugins` feature flag)
wasmtime = { version = "29.0", optional = true }
spire-plugin-api = { path = "../spire-plugin-api", optional = true }

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kinematics_bench"
harness = false

[[bench]]
name = "throughput_bench"
harness = false

[[bench]]
name = "pdg_lookup_bench"
harness = false