[package]
name = "spire-plugin-api"
version.workspace = true
edition.workspace = true
description = "Lightweight plugin interface definitions for SPIRE WASM extensions"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
