[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "spire"
version = "0.1.0"
description = "High-energy physics toolkit - SPIRE Python bindings"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["particle-physics", "hep", "feynman-diagrams", "cross-section"]

[project.optional-dependencies]
jupyter = ["ipywidgets>=8", "matplotlib>=3.5"]

[tool.maturin]
features = ["extension-module"]
module-name = "spire._native"
manifest-path = "Cargo.toml"
