[package]
name = "spire-desktop-backend"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
spire-kernel = { path = "../../../crates/spire-kernel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]